--- a/about/index.html
+++ b/about/index.html
@@ -140,7 +140,7 @@ into the {body} of the default.hbs template -->
             <ul class="nav" role="menu">
     <li class="nav-home" role="menuitem"><a href="/">Home</a></li>
     <li class="nav-about" role="menuitem"><a href="/about/">About</a></li>
-    <li class="nav-jekyll" role="menuitem"><a href="/tag/data_structure/">Data_Structure</a></li>
+    <li class="nav-data_structure" role="menuitem"><a href="/tag/datastructure/">Data Structure</a></li>
     <li class="nav-python" role="menuitem"><a href="/tag/python/">Python</a></li>
     <li class="nav-archive" role="menuitem">
         <a href="/archive.html">All Posts</a>
